<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_overlay" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo_white"
                android:transitionName="@string/transition_name_logo" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_56dp"
                android:layout_marginHorizontal="@dimen/space_24dp"
                android:layout_marginTop="@dimen/space_117dp"
                android:background="@drawable/bg_transparent_rounded_rectangle"
                android:hint="@string/txt_login_email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/space_12dp"
                android:textColorHint="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_56dp"
                android:layout_marginHorizontal="@dimen/space_24dp"
                android:layout_marginTop="@dimen/space_20dp"
                android:background="@drawable/bg_transparent_rounded_rectangle"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/txt_login_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:paddingHorizontal="@dimen/space_12dp"
                    android:textColorHint="@color/gray" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_forget"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/txt_login_forgot"
                    android:textAllCaps="false"
                    android:textColor="@color/gray"
                    app:rippleColor="@android:color/transparent" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_log_in"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_56dp"
                android:layout_marginHorizontal="@dimen/space_24dp"
                android:layout_marginTop="@dimen/space_20dp"
                android:text="@string/txt_login_log_in"
                android:textAllCaps="false"
                android:textColor="@color/text_primary"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                app:cornerRadius="@dimen/space_10dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>



