<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_overlay" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo_white"
                android:transitionName="@string/transition_name_logo" />

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/txt_enter_your_email_to_receive_instructions"
                android:textSize="@dimen/text_size_17"
                android:textColor="@color/white"
                android:layout_marginHorizontal="@dimen/space_24dp"
                android:gravity="center"
                android:layout_marginTop="31dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/spin_kit"
                style="@style/SpinKitView.FadingCircle"
                android:layout_width="@dimen/space_50dp"
                android:layout_height="@dimen/space_50dp"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:visibility="invisible"
                app:SpinKit_Color="@android:color/tab_indicator_text" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_56dp"
                android:layout_marginHorizontal="@dimen/space_24dp"
                android:layout_marginTop="@dimen/space_50dp"
                android:background="@drawable/bg_transparent_rounded_rectangle"
                android:hint="@string/txt_login_email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/space_12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reset"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_56dp"
                android:layout_marginHorizontal="@dimen/space_24dp"
                android:layout_marginTop="@dimen/space_20dp"
                android:text="@string/txt_reset"
                android:textAllCaps="false"
                android:textColor="@color/text_primary"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                app:cornerRadius="@dimen/space_10dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>



